// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/audit_table/audit_row/AuditRow should match snapshot with desc 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 11, 1971
            </div>
            <div>
              05:01 PM
            </div>
          </div>
        </td>
        <td>
          test@example.com
        </td>
        <td
          class="AuditRowDesc"
        >
          Successfully authenticated
        </td>
        <td>
          ::1
        </td>
        <td>
          hb8febm9ytdiz8zqaxj18efqhy
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/audit_table/audit_row/AuditRow should match snapshot with no desc 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 11, 1971
            </div>
            <div>
              05:01 PM
            </div>
          </div>
        </td>
        <td>
          test@example.com
        </td>
        <td
          class="AuditRowDesc"
        >
          Url yeye
        </td>
        <td>
          ::1
        </td>
        <td>
          hb8febm9ytdiz8zqaxj18efqhy
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
